--- a/oss/src/main/resources/application-dev.yml
+++ b/oss/src/main/resources/application-dev.yml
@@ -9,7 +9,17 @@ spring:
         server-addr: stackexplode.cloud:18848
   application:
     name: oss-service
+
 logging:
-  file: oss-service.log
+  file: E:\Javaprojects\guli-mall\.logs\oss-service.log
   level:
-    cloud.stackexplode.gulimall: debug
+    org.zalando.logbook: trace
+logbook:
+  exclude:
+    - "**.html"
+    - "**.htm"
+    - "**.js"
+    - "**.css"
+    - "**.jpg"
+    - "**.ico"
+    - "/static/**"
