--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -11,7 +11,16 @@ spring:
         server-addr: stackexplode.cloud:18848
   application:
     name: product-service
+  task:
+    execution:
+      pool:
+        core-size: 6
+        max-size: 12
+        queue-capacity: 36
+  jackson:
+    date-format: yyyy-MM-dd HH-mm-ss
 mybatis-plus:
+  type-enums-package: cloud.stackexplode.gulimall.common.constant
   mapper-locations: classpath:mapper/*.xml
   global-config:
     db-config:
@@ -28,11 +37,10 @@ logging:
     org.zalando.logbook: trace
 logbook:
   exclude:
-      - "**.html"
-      - "**.htm"
-      - "**.js"
-      - "**.css"
-      - "**.jpg"
-      - "**.ico"
-      - "/static/**"
-
+    - "**.html"
+    - "**.htm"
+    - "**.js"
+    - "**.css"
+    - "**.jpg"
+    - "**.ico"
+    - "/static/**"
