--- a/renren-fast/src/main/resources/application-dev.yml
+++ b/renren-fast/src/main/resources/application-dev.yml
@@ -33,7 +33,7 @@ spring:
           config:
             multi-statement-allow: true
 logging:
-  file: E:\Javaprojects\guli-mall\.logs\product-service.log
+  file: E:\Javaprojects\guli-mall\.logs\renrenfast-service.log
   level:
     org.zalando.logbook: trace
 logbook:
