--- a/mail/src/main/resources/application.yml
+++ b/mail/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: javaxuniji@gmail.com
-    password: kigydcikuatyqhcq
+    password:
     properties:
       mail:
         smtp:
